# spectrue-engine

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  check_config.py  fix_imports.py  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml
docs/: ALGORITHMS.md  API.md  ARCHITECTURE.md  ARCHITECTURE_AT_A_GLANCE.md  CALIBRATION.md  CONSTITUTION.MD  DEEP_MODE.md  DOCUMENTATION_INDEX.md  EVIDENCE_SEMANTICS.md  EXEMPLAR_ANALYSIS.md  FAILURE_MODES_AND_LIMITS.md  FOR_REVIEWERS.md  LLM_FALLBACK.MD  MEDIA_EXPLAINER.md  OUTPUT_CONTRACT.md  README.md  RESEARCH_FOUNDATIONS.md  RESEARCH_OVERVIEW.md  RESOURCE_ACCOUNTING.md  TRACE_CONTRACT.MD  TRACE_GUIDE.md  claim_coverage.md
docs/principles/: FAQ.md  GOVERNANCE_AND_NON_INFLUENCE.md  INDEPENDENCE_AND_FREE_ACCESS.md  INDEPENDENCE_AND_FREE_ACCESS_SUMMARY.md  TIER_PHILOSOPHY_AND_CRITERIA.md  WHAT_SPECTRUE_IS_NOT.md
examples/: README.md  basic_usage.py  calibrate_claim_posterior.py  claim_orchestration.py
pipelines/: deep.yaml  normal.yaml
scripts/: run_eval.py
specs/127-coverage-skeleton-extraction/: tasks.md
spectrue_cli/: __init__.py  pipeline_cmd.py
spectrue_core/: __init__.py  config.py  constants.py  engine.py  models.py  runtime_config.py
spectrue_core/agents/: fact_checker_agent.py  llm_client.py  llm_router.py  llm_schemas.py  prompts.py  static_instructions.py
spectrue_core/analysis/: content_budgeter.py  text_analyzer.py
spectrue_core/auth/: __init__.py  models.py
spectrue_core/billing/: __init__.py  bonus_algo.py  burn_manager.py  config_loader.py  cost_event.py  cost_ledger.py  default_pricing.json  estimation.py  meter_context.py  metering.py  models.py  pool_manager.py  pricing.py  pricing_config_schema.json  products.py  progress_emitter.py  token_estimator.py  types.py
spectrue_core/embeddings/: __init__.py  embed_service.py
spectrue_core/graph/: __init__.py  candidates.py  claim_clusters.py  claim_graph.py  context.py  embedding_util.py  propagation.py  quality_gates.py  ranking.py  selection.py  types.py
spectrue_core/llm/: __init__.py  errors.py  failures.py  fallback.py  model_registry.py
spectrue_core/monetization/: __init__.py  config.py  facade.py  ledger.py  policy.py  types.py
spectrue_core/pipeline/: __init__.py  constants.py  contracts.py  core.py  dag.py  errors.py  execution_state.py  executor.py  factory.py  mode.py  progress.py
spectrue_core/schema/: __init__.py  claim_frame.py  claim_metadata.py  claims.py  evidence.py  policy.py  rgba_audit.py  scoring.py  serialization.py  signals.py  verdict.py  verdict_contract.py
tests/: conftest.py  test_fact_checker_agent.py  test_normal_pipeline_single_claim.py  test_query_generation_sanity_filter.py  test_query_generation_short_fact.py  test_query_generation_trace.py  test_runtime_config.py  test_trace_and_gaps.py
(+388 files in other folders)
