[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spectrue-engine"
version = "0.1.0"
description = "Transparent, hallucination-resistant AI fact-checking engine."
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-only"
authors = [
    { name = "Ivan Bondarenko", email = "wivanw@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=1.0.0",
    "tavily-python>=0.3.0",
    "google-cloud-storage>=2.0.0",
    "httpx>=0.24.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "newspaper3k>=0.2.8",
    "spacy>=3.7.0",
    "faiss-cpu>=1.7.4",
    "numpy>=1.24.0",
    "tenacity>=8.2.0",
    "pydantic>=2.0.0",
    "colorlog>=6.7.0",
    "langdetect>=1.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["spectrue_core"]
